Bug 87108 - FILESAVE: DRAW crashes when saving as fodg from odg, using colors (when using filling with parameter color, or remove color)
Summary: FILESAVE: DRAW crashes when saving as fodg from odg, using colors (when using...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.2.6.2 release
Hardware: Other Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3 ta...
Keywords:
: 75177 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-08 16:14 UTC by jymeet
Modified: 2015-04-28 10:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
7zip of 6 files odg/fodg (155.51 KB, application/x-7z-compressed)
2014-12-08 16:14 UTC, jymeet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jymeet 2014-12-08 16:14:15 UTC
Created attachment 110576 [details]
7zip of 6 files odg/fodg

First create a odg with a Fontwork object, and do'nt change filling color. Save as odg, then fodg, there are no problem.
But when you try to change the filling parameter, i.e. change color or filling category, save with odg extand is correct, but attempt to save with fodg extand, then come the bug and Draw closes. I join in attachement the 6 files, 3/odg and 3/fodg :
« Humanité et faits divers_test-bug-ext-fodg_7.fodg » was got from create drawing and save first in fodg format, and then change to remove color (got « Humanité et faits divers_test-bug-ext-fodg_1.fodg ») and change again filling (got « Humanité et faits divers_test-bug-ext-fodg_7.fodg »). In this way, ther are no problem for filesaving.
how to reproduce bug :
With « Humanité et faits divers_test-bug-ext-fodg.odg » remove color (parameter : no color) and try to save as fodg. Repeat to obtain the same as « Humanité et faits divers_test-bug-ext-fodg_7.odg ». (I got systematically crashs on my system : Intel core i7 Q720 / Win7 SP1 up to date)
Comment 1 Joel Madero 2014-12-09 01:39:46 UTC
Moving down from Critical to Major.

Reason: Critical crashers are reserved for crashers that will affect a large portion of our users, draw is one of our least used components + fodg is not a common extention.

Don't worry - this will literally have 0 impact on the bug getting fixed :) That being said, a backtrace with symbols would help move the bug forward:

https://wiki.documentfoundation.org/Development/How_to_debug#Debugging_with_WinDbg_.28on_Windows.29
Comment 2 Commit Notification 2014-12-09 09:53:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bfd63516c9fd4ec366576f9a0e3c456bc3d530a3

Resolves: fdo#87108 crash on saving fodg

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-12-09 09:54:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b257feba285840dee91e3c3e7ddc112eb8f684e&h=libreoffice-4-4

Resolves: fdo#87108 crash on saving fodg

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-12-09 10:19:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70765cd63e02b57b1b3508e4a740982b7387ff23&h=libreoffice-4-3

Resolves: fdo#87108 crash on saving fodg

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2015-02-04 10:39:02 UTC
*** Bug 75177 has been marked as a duplicate of this bug. ***